fixed spacing in about img, resume button

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -440,13 +440,19 @@ section h3.section-subheading {
     #portfolio .portfolio-item {
         margin: 0 0 30px;
     }
+    
+    .about-content {
+    position: relative;
+    padding: 35px;
+    text-align: center;
+    }
 }
 
 .about-content {
     position: relative;
-    padding: 35px;
+    padding: 5px;
     text-align: center;
-}
+    }
 
 .timeline-heading h4 {
     margin-top: 10px;
@@ -462,8 +468,12 @@ section h3.section-subheading {
     margin-bottom: 0;
 }
 
-a.btn.btn-xl.center-block {
-    margin-top: 80px;
+img.img-circle.img-responsive.center-block {
+    margin: 5px auto 35px;
+}
+
+.about-content div.center-block {
+    margin-top: 65px;
 }
 
 
